--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,8 @@
 @tailwind components;
 @tailwind utilities;
 
-
 * {
-  font-family: "Roboto Slab", serif;
+  font-family: 'Roboto Slab', serif;
 }
 
 *,
@@ -22,11 +21,11 @@ body,
 #root {
   min-height: 100vh;
 
-  #root>div:first-child {
+  #root > div:first-child {
     min-height: 100vh;
   }
 
-  #root>div>div {
+  #root > div > div {
     min-height: 100vh;
   }
 }
