--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,25 @@
 * {
   font-family: "Roboto Slab", serif;
 }
+
+*,
+html,
+body {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+html,
+body,
+#root {
+  min-height: 100vh;
+
+  #root>div:first-child {
+    min-height: 100vh;
+  }
+
+  #root>div>div {
+    min-height: 100vh;
+  }
+}
