Revert "Feature/registration"

--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,9 @@
 @tailwind components;
 @tailwind utilities;
 
+
 * {
-  font-family: 'Roboto Slab', serif;
+  font-family: "Roboto Slab", serif;
 }
 
 *,
@@ -21,11 +22,11 @@ body,
 #root {
   min-height: 100vh;
 
-  #root > div:first-child {
+  #root>div:first-child {
     min-height: 100vh;
   }
 
-  #root > div > div {
+  #root>div>div {
     min-height: 100vh;
   }
 }
